# Orthogon

./: CLAUDE.md  README.md  RELEASE_NOTES_COMPARISON.md  RELEASE_NOTES_v1.0-classik-arm64.md  RELEASE_UPDATE_INSTRUCTIONS.md  SUMMARY.md
app/src/main/jni/: dlx.c  keen-android-jni.c  keen.c  keen_generate.c  keen_modes.h  keen_solver.c  latin.h  (+1 more)
docs/: CLASSIK_TEST_REPORT.md  COQ_BINARIES_REFERENCE.md  FINAL_RELEASE_SUMMARY_2026-01-05.md  FORMAL_VERIFICATION.md  FORMAL_VERIFICATION_TOOLCHAIN.md  FORMAL_VERIFICATION_WORKFLOW.md  GRID_SIZE_DIFFICULTY_MATRIX.md  HYBRID_DLX_SAT_ARCHITECTURE.md  PHASE_STATUS.md  RELEASE_2026-01-05_ARM64.md  RELEASE_CHECKLIST_2026-01-05.md  SOLVER_DIFFICULTY_STANDARDS.md  STATIC_ANALYSIS_REPORT.md  UI_UX_CRITIQUE_2026-01-05.md  UI_UX_EXECUTIVE_SUMMARY.md  UI_UX_FIX_ACTION_PLAN.md  UI_UX_SPACE_CRITIQUE_2026-01-05.md  UI_UX_SPACE_EXECUTIVE_SUMMARY.md  UI_UX_SPACE_FIX_ACTION_PLAN.md
docs/coq/: KeenKenning.LatinEnum.html  KeenKenning.Modes.html  index.html
docs/planning/: roadmap.md
formal/: .gitignore  AGL_INSIGHTS.md  CageOps.v  DLX.v  DSF.v  ENUMERATION_COMPLETENESS_IMPLEMENTATION.md  ENUMERATION_PROOF_STRATEGY.md  EXTRACTION_COMPARISON.md  Extract.v  ExtractClean.v  ExtractMinimal.v  ExtractOptimized.v  ExtractSolver.v  ExtractZ.v  Extraction.v  GeneratorSpec.v  LatinBoundsClean.v  LatinBoundsZ.v  LatinEnum.v  LatinSquare.v  LatinSquare4x4.smt2  LatinSquareSMT.smt2  Makefile  Makefile.coq  Makefile.coq.conf  Modes.v  PHASE_PLAN_UPDATED.md  SAT.v  SolverSpec.v  SolverTypes.v  VerifiedExtraction.v  dlx_latin_bridge.c  dlx_latin_bridge.h  keen_verified.c  keen_verified.h  keen_verified_jni.c  keen_verified_jni.h  latin_bounds  latin_bounds.ml  latin_clean.ml  (+15 more)
formal/extracted/: CageOpsEval.ml  CageOpsEval.mli  DLX.ml  DLX.mli  DSFOps.ml  DSFOps.mli  GeneratorSpecOps.ml  GeneratorSpecOps.mli  LatinSquare.ml  LatinSquare.mli  SAT.ml  SAT.mli  SolverSpecOps.ml  SolverSpecOps.mli  SolverTypesCore.ml  SolverTypesCore.mli  dsf_init.s
scripts/: test_classik_modes.sh  update-release-notes.sh
scripts/archive/refactoring_2025/: fix_bitwise_32bit.py  fix_bitwise_final.py  fix_sign_conversions.py  refactor_clue_t_logic.py  refactor_clues_type.py  revert_types.py  rewrite_validate.py  surgical_fix.py  surgical_fix_2.py  surgical_fix_final.py  surgical_fix_final_2.py  surgical_fix_final_3.py  surgical_fix_final_4.py  surgical_fix_final_5.py
tests/native/: CMakeLists.txt  host_stubs.c  keen_test_harness.c
(+20 files in other folders)
